force-app/main/default/objects/Snapshot_Relationship__c/Snapshot_Relationship__c.object-meta.xml
<CustomObject>
    <description>関係構築度の履歴を取得するためにレコードを作成するオブジェクト</description>
    <label>関係構築度スナップショット</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>レコードNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>