force-app/main/default/objects/Snapshot_Relationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>*得意先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>関係構築度スナップショット</relationshipLabel>
    <relationshipName>Y3PX</relationshipName>
    <type>Lookup</type>
</CustomField>