force-app/main/default/objects/Snapshot_Relationship__c/fields/Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Text__c</fullName>
    <label>日付</label>
    <length>255</length>
    <type>Text</type>
</CustomField>