force-app/main/default/objects/Snapshot_Relationship__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>Contact__r.Id</formula>
    <label>得意先担当者ID</label>
    <type>Text</type>
</CustomField>