force-app/main/default/objects/Snapshot_Relationship__c/fields/Snapshoted_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Snapshoted_Relationship__c</fullName>
    <label>関係構築度(スナップショット)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>